--- a/styles.css
+++ b/styles.css
@@ -471,6 +471,11 @@
 
 /* Responsive */
 @media screen and (max-width: 600px) {
+
+    body{
+        padding:0;
+        margin:0;
+    } 
     .for-you-promo-box, .promo-box {
         flex-direction: column;
         align-items: start;
